<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_img" >

    <include
        android:id="@+id/include"
        android:layout_alignParentTop="true"
        layout="@layout/title_bar" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/include"
        android:background="@color/mask" />

    <ImageView
        android:id="@+id/editor_img_headpic"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_below="@+id/include"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/default_image" />

    <com.fourteencells.StudentAssociation.customview.MyCircleImageView
        android:id="@+id/edit_head_pic"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_below="@+id/include"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/editor_img_headpic"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:background="#7aCCCCCC" />

            <LinearLayout
                style="@style/mine_info"
                android:orientation="horizontal" >

                <TextView
                    style="@style/mine_info_text0"
                    android:text="@string/name_" />

                <EditText
                    android:id="@+id/editor_personal_info_name"
                    style="@style/mine_info_text"
                    android:hint="@string/hint_title" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:background="#7aCCCCCC" />

            <LinearLayout
                style="@style/mine_info"
                android:orientation="horizontal" >

                <TextView
                    style="@style/mine_info_text0"
                    android:text="@string/sex" />

                <TextView
                    android:id="@+id/editor_personal_info_sex"
                    style="@style/mine_info_text"
                    android:text="" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:background="#7aCCCCCC" />

            <LinearLayout
                style="@style/mine_info"
                android:orientation="horizontal" >

                <TextView
                    style="@style/mine_info_text0"
                    android:text="@string/school_" />

                <EditText
                    android:id="@+id/editor_personal_info_school"
                    style="@style/mine_info_text"
                    android:hint="@string/hint_info_school" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:background="#7aCCCCCC" />

            <LinearLayout
                style="@style/mine_info"
                android:orientation="horizontal" >

                <TextView
                    style="@style/mine_info_text0"
                    android:text="@string/college" />

                <EditText
                    android:id="@+id/editor_personal_info_college"
                    style="@style/mine_info_text"
                    android:hint="@string/hint_info_college" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:background="#7aCCCCCC" />

            <LinearLayout
                style="@style/mine_info"
                android:orientation="horizontal" >

                <TextView
                    style="@style/mine_info_text0"
                    android:text="@string/schoolNo" />

                <EditText
                    android:id="@+id/editor_personal_info_schoolNo"
                    style="@style/mine_info_text"
                    android:hint="@string/hint_info_schoolnum" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:background="#7aCCCCCC" />

            <LinearLayout
                style="@style/mine_info"
                android:orientation="horizontal" >

                <TextView
                    style="@style/mine_info_text0"
                    android:text="@string/enrollment_time" />

                <TextView
                    android:id="@+id/editor_personal_info_time"
                    style="@style/mine_info_text"
                    android:text="" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:background="#7aCCCCCC" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>