<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_img"
    android:orientation="vertical" >

    <include layout="@layout/title_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:background="@color/mask"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/hint_info_one"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <ImageView
                android:id="@+id/select_photo"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/img_camera2" />

            <com.fourteencells.StudentAssociation.customview.MyCircleImageView
                android:id="@+id/affirm_photo"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>

        <EditText
            android:id="@+id/in_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@color/transparent"
            android:hint="@string/hint_info1"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/dw" />

        <TextView
            android:id="@+id/hint_info2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/hint_info2"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp" >

            <Button
                android:id="@+id/in_user_sex1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:background="@drawable/btn_refuse"
                android:text="@string/sex1" />

            <Button
                android:id="@+id/in_user_sex2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_weight="1"
                android:background="@drawable/btn_refuse"
                android:text="@string/sex2" />
        </LinearLayout>

        <Button
            android:id="@+id/in_next_activity"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/login_bg"
            android:text="@string/wanshan"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/in_skip_activity"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/login_bg"
            android:text="@string/skip"
            android:textColor="@color/white" />
    </LinearLayout>

</RelativeLayout>