<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_img"
    android:orientation="vertical" >

    <include
        android:id="@+id/include_check_member"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        layout="@layout/title_bar" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/include_check_member"
        android:background="@color/mask" />

    <com.fourteencells.StudentAssociation.customview.MyCircleImageView
        android:id="@+id/new_user_photo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_below="@+id/include_check_member"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/default_image" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/new_user_photo"
        android:layout_marginBottom="55dp"
        android:layout_marginTop="10dp"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:background="#7aCCCCCC" />

            <LinearLayout
                style="@style/mine_info"
                android:orientation="horizontal" >

                <TextView
                    style="@style/mine_info_text0"
                    android:text="@string/name_" />

                <TextView
                    android:id="@+id/new_user_name"
                    style="@style/mine_info_text"
                    android:text="" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:background="#7aCCCCCC" />

            <LinearLayout
                style="@style/mine_info"
                android:orientation="horizontal" >

                <TextView
                    style="@style/mine_info_text0"
                    android:text="@string/sex" />

                <TextView
                    android:id="@+id/new_user_sex"
                    style="@style/mine_info_text"
                    android:text="" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:background="#7aCCCCCC" />

            <LinearLayout
                style="@style/mine_info"
                android:orientation="horizontal" >

                <TextView
                    style="@style/mine_info_text0"
                    android:text="@string/school_" />

                <TextView
                    android:id="@+id/new_user_school"
                    style="@style/mine_info_text"
                    android:text="" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:background="#7aCCCCCC" />

            <LinearLayout
                style="@style/mine_info"
                android:orientation="horizontal" >

                <TextView
                    style="@style/mine_info_text0"
                    android:text="@string/college" />

                <TextView
                    android:id="@+id/new_user_college"
                    style="@style/mine_info_text"
                    android:text="" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:background="#7aCCCCCC" />

            <LinearLayout
                style="@style/mine_info"
                android:orientation="horizontal" >

                <TextView
                    style="@style/mine_info_text0"
                    android:text="@string/schoolNo" />

                <TextView
                    android:id="@+id/new_user_number"
                    style="@style/mine_info_text"
                    android:text="" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:background="#7aCCCCCC" />

            <LinearLayout
                style="@style/mine_info"
                android:orientation="horizontal" >

                <TextView
                    style="@style/mine_info_text0"
                    android:text="@string/enrollment_time" />

                <TextView
                    android:id="@+id/new_user_school_time"
                    style="@style/mine_info_text"
                    android:text="" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:background="#7aCCCCCC" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_margin="5dp" >

        <Button
            android:id="@+id/button_refuse"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn_refuse"
            android:text="@string/refuse" />

        <Button
            android:id="@+id/button_consent"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn_agree"
            android:text="@string/consent" />
    </LinearLayout>

</RelativeLayout>