<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_img"
    android:orientation="vertical" >

    <include layout="@layout/title_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:background="@color/mask"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:padding="5dp"
                android:text="@string/old_password"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/in_old_pwd"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:hint="@string/old_password_hint"
                android:inputType="textPassword"
                android:padding="5dp"
                android:textColor="@color/dw"
                android:textColorHint="@color/dw"
                android:textCursorDrawable="@null"
                android:textSize="15sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="10dp"
            android:background="@color/dw" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:padding="5dp"
                android:text="@string/new_password"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/in_new_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:hint="@string/new_password_hint"
                android:inputType="textPassword"
                android:padding="5dp"
                android:textColor="@color/dw"
                android:textColorHint="@color/dw"
                android:textCursorDrawable="@null"
                android:textSize="15sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="10dp"
            android:background="@color/dw" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:padding="5dp"
                android:text="@string/new_password_to"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/in_new_pwd_to"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:hint="@string/new_password_to_hint"
                android:inputType="textPassword"
                android:padding="5dp"
                android:textColor="@color/dw"
                android:textColorHint="@color/dw"
                android:textCursorDrawable="@null"
                android:textSize="15sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="10dp"
            android:background="@color/dw" />
    </LinearLayout>

</RelativeLayout>